# cpplox

./: .gitignore  CMakeLists.txt  README.md
examples/: arithmetic.cpplox  classes.cpplox  closures.cpplox  comparison.cpplox  constructors.cpplox  control_flow.cpplox  functions.cpplox  inheritance.cpplox  lambdas.cpplox  logical_operators.cpplox  modules.cpplox  modules1.cpplox  native_funcs.cpplox  nil.cpplox  print.cpplox  shadowing.cpplox  static_methods.cpplox  variables.cpplox
include/: ast_printer.h  callable.h  class.h  environment.h  error.h  error_handler.h  function.h  instance.h  interpreter.h  lambda.h  literal.h  parser.h  resolver.h  return.h  scanner.h  token.h  value.h
include/native_functions/: clock_fn.h  println.h
include/syntax_tree/: binary.h  expression.h  grouping.h  literal.h  statement.h  unary.h  visitor.h
src/: CMakeLists.txt  ast_printer.cpp  class.cpp  environment.cpp  error.cpp  error_handler.cpp  function.cpp  gen_ast.py  instance.cpp  interpreter.cpp  lambda.cpp  literal.cpp  main.cpp  parser.cpp  resolver.cpp  scanner.cpp  token.cpp  value.cpp
src/native_functions/: CMakeLists.txt  clock_fn.cpp  println.cpp
test_scripts/: test.garm
